# argocd-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  argocd-ioc-monitor.code-workspace  docker-entrypoint.sh  eslint.config.js  index.html  justfile  nginx.conf  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  pyproject.toml  switcher.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  postStart.sh
0.1.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.1.2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.1.3/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.1.3-beta.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.1.3-beta.3/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
0.2.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.2.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
0.3.2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
0.5.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.5.0-beta.2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
0.5.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.5.2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
0.5.3-beta.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  reference.html  search.html  tutorials.html
(+356 files in other folders)
